--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Gambling -- Fiction'
 - !lcc 'PG'
 - !lcsh 'Russia -- Social life and customs -- Fiction'
+- GITenberg
 title: Patarouva
 url: http://www.gutenberg.org/ebooks/34418
